Add static site files

--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
 		<meta name="description" content="Explore the professional journey of Vincent Phung, a passionate IT professional and innovative software developer." />
 		<meta property="og:title" content="Vincent Phung - Crafting Digital Experiences" />
 		<meta property="og:description" content="Explore the professional journey of Vincent Phung, a passionate IT professional and innovative software developer." />
-		<meta property="og:image" content="https://example.com/image.jpg" />
+		<!-- <meta property="og:image" content="https://example.com/image.jpg" /> -->
+		<meta property="og:image" content="" />
 		<meta property="og:url" content="https://example.com" />
 		<meta name="twitter:card" content="summary_large_image" />
 		<link rel="stylesheet" href="styles/index.processed.css">
@@ -73,7 +74,8 @@
 										<a class="cta-button" href="#contact">Let's Connect</a>
 								</div>
 								<div class="col-md-6 about-image">
-										<img src="https://assets.codepen.io/9659831/pic.jpeg" alt="Vincent Phung" />
+										<!-- <img src="https://assets.codepen.io/9659831/pic.jpeg" alt="Vincent Phung" /> -->
+										<img src="https://assets.codepen.io/9659831/profile-pic.png" alt="Vincent Phung" />
 								</div>
 						</div>
 				</div>
@@ -114,11 +116,11 @@
 										<h2>Networking</h2>
 										<p>Knowledge in network configuration and troubleshooting.</p>
 								</div>
-								<div class="skill" data-aos="zoom-in" data-aos-delay="800">
+								<!-- <div class="skill" data-aos="zoom-in" data-aos-delay="800">
 										<i class="fas fa-lock"></i>
 										<h2>Cybersecurity</h2>
 										<p>Security protocols, risk assessment, and mitigation strategies.</p>
-								</div>
+								</div> -->
 								<div class="skill" data-aos="zoom-in" data-aos-delay="900">
 										<i class="fas fa-tools"></i>
 										<h2>DevOps</h2>
@@ -144,7 +146,7 @@
 		</section>
 
 		<!-- Projects Section -->
-		<section class="projects-section" id="projects" data-aos="fade-up">
+		<!-- <section class="projects-section" id="projects" data-aos="fade-up">
 				<div class="container">
 						<h1>Projects</h1>
 						<div class="projects-grid">
@@ -176,10 +178,151 @@
 										</div>
 								</div>
 
-								<!-- Other project cards -->
+
+
+
 						</div>
 				</div>
-		</section>
+		</section> -->
+
+
+		<section class="projects-section" data-aos="fade-up" id="projects">
+			<div class="container">
+			<h1>Highlighted Projects</h1>
+			<div class="projects-grid">
+	
+		 <!-- Project 1: Ravenous - Restaurant Discovery App -->
+		 <div class="project-card" data-aos="zoom-in" data-aos-delay="100">
+				<img src="https://assets.codepen.io/9659831/autoease+-+01_2.gif" alt="Ravenous Restaurant Discovery App">
+				<div class="project-card-info">
+					 <h2>Ravenous: Advanced Restaurant Discovery</h2>
+					 <p>A sophisticated React application that revolutionizes the way users find and evaluate dining options, integrating real-time data from Yelp for comprehensive reviews, ratings, and pricing.</p>
+					 <a href="https://github.com/yourusername/project-repo" target="_blank" class="github-link">
+							<i class="fab fa-github"></i> View on GitHub
+					 </a>
+				</div>
+		 </div>
+	
+		 <!-- Project 2: Wardrobify - Wardrobe Manager -->
+		 <div class="project-card" data-aos="zoom-in" data-aos-delay="200">
+				<img src="https://assets.codepen.io/9659831/wardrobify.gif" alt="Wardrobify Wardrobe Manager">
+				<div class="project-card-info">
+					 <h2>Wardrobify: Intuitive Wardrobe Management</h2>
+					 <p>A dynamic Django and React application that transforms wardrobe organization, offering personalized management of hats, shoes, and other apparel with a user-friendly interface.</p>
+					 <a href="https://github.com/yourusername/project-repo" target="_blank" class="github-link">
+							<i class="fab fa-github"></i> View on GitHub
+					 </a>
+				</div>
+		 </div>
+	
+		 <!-- Project 3: Direct Rep - Automated Citizen-to-Official Letters -->
+		 <div class="project-card" data-aos="zoom-in" data-aos-delay="300">
+				<img src="https://assets.codepen.io/9659831/directrep.gif" alt="Direct Rep">
+				<div class="project-card-info">
+					 <h2>Direct Rep: Streamlining Public Communication</h2>
+					 <p>An innovative platform that automates and enhances citizen-to-official correspondence in the U.S., fostering improved government transparency and civic engagement.</p>
+					 <a href="https://github.com/yourusername/project-repo" target="_blank" class="github-link">
+							<i class="fab fa-github"></i> View on GitHub
+					 </a>
+				</div>
+		 </div>
+	
+		 <!-- Project 4: Auto Ease - Dealership Operations App -->
+		 <div class="project-card" data-aos="zoom-in" data-aos-delay="400">
+				<img src="https://assets.codepen.io/9659831/autoease+-+01_2.gif" alt="Auto Ease">
+				<div class="project-card-info">
+					 <h2>Auto Ease: Revolutionizing Dealership Management</h2>
+					 <p>A comprehensive application engineered with React, Django, and various APIs, designed to optimize car dealership operations, enhancing performance and data management capabilities.</p>
+					 <a href="https://github.com/yourusername/project-repo" target="_blank" class="github-link">
+							<i class="fab fa-github"></i> View on GitHub
+					 </a>
+				</div>
+		 </div>
+	
+		 <!-- Additional Projects -->
+
+		 <!-- Conference Go - Event Management App -->
+<div class="project-card" data-aos="zoom-in" data-aos-delay="500">
+	<img src="https://assets.codepen.io/9659831/conferencego1.gif" alt="Conference Go App">
+	<div class="project-card-info">
+			<h2>Conference Go: Event Management Simplified</h2>
+			<p>Streamlines event planning with efficient registration and data processing, enhancing attendee experience.</p>
+			<a href="https://github.com/yourusername/conference-go" target="_blank" class="github-link">
+					<i class="fab fa-github"></i> GitHub
+			</a>
+	</div>
+</div>
+
+<!-- Jamming App - Spotify Playlist Creator -->
+<div class="project-card" data-aos="zoom-in" data-aos-delay="600">
+	<img src="https://assets.codepen.io/9659831/jamming.gif" alt="Jamming App">
+	<div class="project-card-info">
+			<h2>Jamming: Interactive Spotify Playlist Creator</h2>
+			<p>React-based app for creating and managing Spotify playlists with seamless search functionality.</p>
+			<a href="https://github.com/yourusername/jamming-app" target="_blank" class="github-link">
+					<i class="fab fa-github"></i> GitHub
+			</a>
+	</div>
+</div>
+
+	
+		 <!-- Project 5: Active Directory on Azure VMs -->
+		 <div class="project-card" data-aos="zoom-in" data-aos-delay="400">
+				<img src="https://www.howtoforge.com/images/how_to_install_osticket_on_debian_11/big/p7.png" alt="Active Directory Deployment">
+				<div class="project-card-info">
+					 <h2>Active Directory on Azure VMs: Secure Deployment Guide</h2>
+					 <p>A comprehensive and streamlined guide for the secure setup of Active Directory on Azure VMs, complete with detailed steps and illustrative visuals, ensuring robust and scalable network architecture.</p>
+					 <a href="https://github.com/yourusername/active-directory-deployment" target="_blank" class="github-link">
+							<i class="fab fa-github"></i> View on GitHub
+					 </a>
+				</div>
+		 </div>
+	
+		 <!-- Project 6: osTicket Lifecycle -->
+		 <div class="project-card" data-aos="zoom-in" data-aos-delay="200">
+				<!-- <img src="https://www.howtoforge.com/images/how_to_install_osticket_on_debian_11/big/p7.png" alt="osTicket Lifecycle"> -->
+				<img src="" alt="osTicket Lifecycle">
+				<div class="project-card-info">
+					 <h2>osTicket Lifecycle: In-Depth Analysis</h2>
+					 <p>An insightful exploration into the ticket lifecycle within osTicket, offering a deep understanding of its functionalities and operational flow.</p>
+					 <a href="https://github.com/yourusername/osticket-lifecycle" target="_blank" class="github-link">
+							<i class="fab fa-github"></i> View on GitHub
+					 </a>
+				</div>
+		 </div>
+	
+		 <!-- Project 7: osTicket Post-Installation Configuration Guide -->
+		 <div class="project-card" data-aos="zoom-in" data-aos-delay="300">
+				<img src="https://www.howtoforge.com/images/how_to_install_osticket_on_debian_11/big/p7.png" alt="osTicket Configuration">
+				<div class="project-card-info">
+					 <h2>osTicket Configuration: Post-Installation Best Practices</h2>
+					 <p>A detailed guide on configuring your system post-osTicket installation, ensuring optimal performance and user experience.</p>
+					 <a href="https://github.com/yourusername/osticket-config" target="_blank" class="github-link">
+							<i class="fab fa-github"></i> View on GitHub
+					 </a>
+				</div>
+		 </div>
+	
+		 <!-- Project 8: Inspecting Traffic Between Azure VMs using
+	
+	 NSGs -->
+		 <div class="project-card" data-aos="zoom-in" data-aos-delay="400">
+				<img src="https://www.howtoforge.com/images/how_to_install_osticket_on_debian_11/big/p7.png" alt="Azure VM Traffic Inspection">
+				<div class="project-card-info">
+					 <h2>Azure VM Traffic Inspection: NSGs and Wireshark</h2>
+					 <p>A detailed exploration of monitoring network traffic in Azure VMs using Network Security Groups (NSGs) and Wireshark, enhancing security and network efficiency.</p>
+					 <a href="https://github.com/yourusername/azure-vm-traffic-inspection" target="_blank" class="github-link">
+							<i class="fab fa-github"></i> View on GitHub
+					 </a>
+				</div>
+		 </div>
+		</div>
+	
+		 </div>
+	</section>
+	
+	
+
 
 		<!-- Contact Section -->
 		<section class="contact-section" id="contact" data-aos="zoom-in-up">
